testsuite/poke.pkl/apop-diag-3.pk
/* { dg-do compile } */

var a = int[12#B] ();

apop (a); /* { dg-error "apop is not allowed on a bounded array" } */
